projects/compiler/test/typechecker/try/error_bad_return_type_option.abra
func foo(): Int? = Some(123)

func bar(): Int {
  val x = try foo()
  x + 1
}